--- a/User_Management/pom.xml
+++ b/User_Management/pom.xml
@@ -23,6 +23,16 @@
 
 	<dependencies>
 		<dependency>
+        		<groupId>javax.xml.bind</groupId>
+        		<artifactId>jaxb-api</artifactId>
+        		<version>2.3.0</version>
+		</dependency>
+		<dependency>
+    			<groupId>org.hibernate</groupId>
+    			<artifactId>hibernate-entitymanager</artifactId>
+    			<version>5.2.3.Final</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
