--- a/User_Management/pom.xml
+++ b/User_Management/pom.xml
@@ -21,17 +21,32 @@
 		<version>2.1.6.RELEASE</version>
 	</parent>
 
+
+
 	<dependencies>
-		<dependency>
-        		<groupId>javax.xml.bind</groupId>
-        		<artifactId>jaxb-api</artifactId>
-        		<version>2.3.0</version>
-		</dependency>
-		<dependency>
-    			<groupId>org.hibernate</groupId>
-    			<artifactId>hibernate-entitymanager</artifactId>
-    			<version>5.2.3.Final</version>
-		</dependency>
+<dependency>
+    <groupId>org.hibernate.javax.persistence</groupId>
+    <artifactId>hibernate-jpa-2.1-api</artifactId>
+    <version>1.0.0.Final</version>
+</dependency>
+<dependency>
+ <groupId>org.hibernate</groupId>
+    <artifactId>hibernate-core</artifactId>
+    <version>5.2.3.Final</version>
+</dependency>
+<dependency>
+    <groupId>org.hibernate</groupId>
+    <artifactId>hibernate-entitymanager</artifactId>
+    <version>5.2.3.Final</version>
+</dependency>
+        
+<dependency>
+        <groupId>javax.xml.bind</groupId>
+        <artifactId>jaxb-api</artifactId>
+        <version>2.3.0</version>
+</dependency>
+
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -53,11 +68,6 @@
 		</dependency>
 
 
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-core</artifactId>
-			<version>5.4.8.Final</version>
-		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.mindrot/jbcrypt -->
 		<dependency>
