--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,3 +55,13 @@ services:
     links: 
         - rabbit
 
+  session:
+    build: ./Session_Management
+    ports:
+      - "9000:9000"
+  
+  mongo:
+    image: mongo
+    ports:
+      - "20000:27017"
+
