--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,3 +65,22 @@ services:
     ports:
       - "20000:27017"
 
+  user_management-service:
+    build:
+      context: ./User_Management
+      dockerfile: Dockerfile
+    ports:
+      - "8082:8082"
+    #networks:
+     # - user_management-service-network
+    depends_on:
+      - mysqldb
+ 
+  mysqldb:
+    image: mysql:8
+    #networks:
+     # - user_management-service-network
+    environment:
+      - MYSQL_ROOT_PASSWORD=qwerty1234
+      - MYSQL_DATABASE=devoteam_user  
+
