--- a/User_Management/src/main/resources/application.properties
+++ b/User_Management/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8082
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://mysqldb:3306/devoteam_user
 spring.datasource.username=root
