--- a/kube_deployment_yaml_files/model-exec-deployment.yaml
+++ b/kube_deployment_yaml_files/model-exec-deployment.yaml
@@ -18,7 +18,8 @@ spec:
         io.kompose.service: model-exec
     spec:
       containers:
-      - image: sumant29/sumant29:Model_Execution
+      - imagePullPolicy: Always
+        image: devoteam1/devoteam:Model_Execution
         name: model-exec
         resources: {}
       restartPolicy: Always
