--- a/kube_deployment_yaml_files/session-deployment.yaml
+++ b/kube_deployment_yaml_files/session-deployment.yaml
@@ -14,7 +14,8 @@ spec:
         app: session
     spec:
       containers:
-      - image: sumant29/sumant29:session
+      - imagePullPolicy: Always
+        image: devoteam1/devoteam:session
         name: session
         ports:
         - containerPort: 9000
