--- a/Session_Management/package.json
+++ b/Session_Management/package.json
@@ -4,7 +4,7 @@
   "description": "Session management for Nexrad",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --forceExit",
     "start": "node index"
   },
   "author": "Sainath Parakala",
@@ -15,5 +15,11 @@
     "mongoose": "^5.8.11",
     "mongoose-timestamp": "^0.6.0",
     "morgan": "^1.9.1"
+  },
+  "devDependencies": {
+    "@shelf/jest-mongodb": "^1.1.3",
+    "jest": "^25.1.0",
+    "mongodb": "^3.5.5",
+    "supertest": "^4.0.2"
   }
 }
