--- a/kube_deployment_yaml_files/rabbit-service.yaml
+++ b/kube_deployment_yaml_files/rabbit-service.yaml
@@ -16,6 +16,9 @@ spec:
   - name: "5672"
     port: 5672
     targetPort: 5672
+  - name: "4369"
+    port: 4369
+    targetPort: 4369
   selector:
     io.kompose.service: rabbit
 status:
