--- a/deployment_yamls/virtualservice_canary.yaml
+++ b/deployment_yamls/virtualservice_canary.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: nodejs
+  name: canaryvs
 spec:
   hosts:
   - "*"
@@ -12,17 +12,17 @@ spec:
     - destination:
         host: api
         subset: v1
-      weight: 1
+      weight: 80
     - destination:
         host: api
         subset: v2
-      weight: 99
+      weight: 20
 
 ---
 apiVersion: networking.istio.io/v1alpha3
 kind: DestinationRule
 metadata:
-  name: nodejs
+  name: canaryvs
 spec:
   host: api
   subsets:
