--- a/kube_deployment_yaml_files/api-deployment.yaml
+++ b/kube_deployment_yaml_files/api-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   labels:
-    app: api
+    version: v1
   name: api
 spec:
   replicas: 1
@@ -13,6 +13,7 @@ spec:
     metadata:
       labels:
         app: api
+        version: v1
     spec:
       containers:
       - imagePullPolicy: Always
